<resources>
    <string name="app_name">Calendo</string>
    <string name="head_text">Calendo</string>
    <string name="button_send">send</string>
    <string name="message_text">Enter Text Here</string>
    <string name="message_sender">John</string>


    <string name="button_googleSignIn">Google Sign In</string>
    <string name="button_signUp">sign up</string>
...
