...
            android:backgroundTint="@color/blue"
            />



        <Button
            android:id="@+id/button_createEvent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_createTitle"
            android:textSize="11sp"
            android:layout_marginStart="8dp"
...
